# SCL

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  classscl_1_1Memory-members.html  classscl_1_1Memory.html  classscl_1_1Memory__inherit__graph.map  classscl_1_1Memory__inherit__graph.md5  classscl_1_1dictionary-members.html  classscl_1_1dictionary.html  classscl_1_1dictionary.js  classscl_1_1dictionary__coll__graph.map  classscl_1_1dictionary__coll__graph.md5  classscl_1_1dictionary__inherit__graph.map  classscl_1_1dictionary__inherit__graph.md5  classscl_1_1internal_1_1RefObj-members.html  classscl_1_1internal_1_1RefObj.html  classscl_1_1internal_1_1RefObj.js  classscl_1_1internal_1_1RefObj__inherit__graph.map  classscl_1_1internal_1_1RefObj__inherit__graph.md5  classscl_1_1internal_1_1htab__iterator-members.html  classscl_1_1internal_1_1htab__iterator.html  classscl_1_1internal_1_1htab__iterator.js  classscl_1_1internal_1_1str__iterator-members.html  classscl_1_1internal_1_1str__iterator.html  classscl_1_1jobs_1_1JobServer-members.html  classscl_1_1jobs_1_1JobServer.html  classscl_1_1jobs_1_1JobServer.js  classscl_1_1jobs_1_1JobWorker-members.html  classscl_1_1jobs_1_1JobWorker.html  classscl_1_1jobs_1_1JobWorker.js  classscl_1_1jobs_1_1funcJob-members.html  classscl_1_1jobs_1_1funcJob.html  (+222 more)
.github/workflows/: doxygen-gh-pages.yml
cmake/: clangd.cmake  clangdConfig.cmake  mini.cmake
d0/d05/: classscl_1_1reduce__stream-members.html
d0/d3d/: classscl_1_1xml_1_1XmlAttr__coll__graph.map  classscl_1_1xml_1_1XmlAttr__coll__graph.md5
d0/d51/: classscl_1_1xml_1_1XmlAttr__inherit__graph.map  classscl_1_1xml_1_1XmlAttr__inherit__graph.md5
d0/d52/: structscl_1_1internal_1_1hnode-members.html
d0/d70/: classscl_1_1pack_1_1PackIndex.html  classscl_1_1pack_1_1PackIndex.js
d0/d8a/: classscl_1_1stream__inherit__graph.map  classscl_1_1stream__inherit__graph.md5
d0/db3/: classscl_1_1jobs_1_1JobServer__coll__graph.map  classscl_1_1jobs_1_1JobServer__coll__graph.md5
d0/ddc/: classscl_1_1xml_1_1XmlElem-members.html
d0/dff/: classscl_1_1string__coll__graph.map  classscl_1_1string__coll__graph.md5
d1/d31/: classscl_1_1reduce__stream.html  classscl_1_1reduce__stream.js
d1/d32/: sclcore_8hpp_source.html
d3/dbf/: namespacescl.js  (+1 more)
docs/: SCA.md  SPK.md  customdoxygen.css  manual.md  spk.md  thedoxygen.css
examples/: package.cpp  test.cpp
scripts/: clangdConfig.cmake  mini.cmake  mini.py  minify.ps1
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_15.js  functions_2.js  (+17 more)
src/: sclcore.cpp  sclcore.hpp  scldict.cpp  scldict.hpp  sclimpl.cpp  scljobs.cpp  scljobs.hpp  sclpack.cpp  sclpack.hpp  sclpath.cpp  sclpath.hpp  sclreduce.cpp  sclreduce.hpp  sclvfs.hpp  sclxml.hpp
(+268 files in other folders)
